<resources>
    <string name="app_name">smartToDo</string>

    <string name="action_setting">Settings</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="completed">Completed</string>
    <string name="whats_next">What\'s next</string>
    <string name="action_delete">Delete</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="new_todo_list_name">List Name</string>
    <string name="new_todo_list_description">List Description</string>
    <string name="add_a_to_do">Add A List Name</string>
    <string name="add_a_todo_item">Add A To-Do</string>

    <string name="default_pw">!)@(#*$%%^1092384756</string>

    <string name="action_settings">Settings</string>

    <string name="about_me">Developer: Xin Su \nEmail: xis49@pitt.edu \nContact: 412.304.5387 \nIf you have any suggestions and questions, welcome to contact me.
    \n\n\nI am a graduate student, and I developed this app in spare time, evenings and weekends. If you like it, you can give me five stars. If you really like it, you can also donate some money. But if you do not like it, I hope you can also give me four stars. I will be appreciated that.</string>

    <string name="about_me_donation">In case you want to buy me a beer, click to copy the address. \n\nVersion: 1.0</string>
    <string name="venmo">Xin-Su-2</string>
    <string name="wechat">suxin20100529</string>
    <string name="alipay">820897172@qq.com</string>

    <string name="help_reminder">Reminder is a tool can remind you important things. You can set up date and time to remind you. If you have done that thing, you can check che checkbox of that item or delete it.</string>
    <string name="help_todo">Todo is a tool can remind you to check things you need to do. You can set up Todo list and add list items under that todo name. \n
    Long Click in delete the main todo list, click \'clear\' to delete the whole items in the list item page.</string>
    <string name="help_notebook">Notebook is a tool you can take notes. You can add note name and add note content or you can also take a photo and save in the notebook.</string>
    <string name="help_calculator">Calculator is a tool you can regard as a normal calculator. However, it is also a private storage tool. You can set up your password in your calculator page. Then, every time if you input those your password and press percentage it will go to another page, you can store your bank account and password or other important user namge and password there.</string>


    <string name="user_profile_picture">User profile picture</string>

    <string name="choose_user_picture">Choose user picture</string>

    <string name="basic_info_edit_email_hint">Your email</string>
    <string name="basic_info_edit_name_hint">Your name</string>

    <string-array name="language">
        <item>Select Language</item>
        <item>English</item>
        <item>中文</item>
    </string-array>

    <string name="reminder">Reminder</string>
    <string name="todo">Todo List</string>
    <string name="notebook">Notebook</string>
    <string name="calculator">Calculator+</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="aboutme">About Me</string>
    <string name="general">General</string>


    <string name="new_todo_list">New Todo List</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="wishlist_name">TodoList Name</string>
    <string name="item_in">Items in </string>
    <string name="has_been_cleared"> has been cleared</string>
    <string name="long_click_to_delete">Long click list to delete</string>


    <string name="click_image_to_show_full_image">Click image to show full image</string>
    <string name="note_name">Note Name</string>
    <string name="write_your_note_content_here">Write your note content here</string>


    <string name="save">Save</string>
    <string name="clear">Clear All</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="homepage">HomePage</string>
    <string name="reset_password">Reset Password</string>


    <string name="set_password_and_click">Set Password and Click %</string>
    <string name="bank">Bank Card</string>
    <string name="secret">Secret</string>
    <string name="secret_name">Secret Name</string>
    <string name="secret_textview_hint">You can Add important username and passwords here</string>
    <string name="secret_cardview_hint">Add Your Secret Fragment</string>


    <string name="language">Language</string>
    <string name="background_image">Change Background Image</string>
    <string name="give_five_stars">Give Five Stars</string>


    <string name="got_it">Got it!</string>


    <string name="aboutme_venmo">Venmo</string>
    <string name="aboutme_wechat">WeChat ID</string>
    <string name="aboutme_Alipay">Alipay</string>
    <string name="venmo_copy">Venmo address has copied successfully</string>
    <string name="wechat_copy">WeChat ID has copied successfully</string>
    <string name="alipay_copy">Alipay ID has copied successfully</string>


    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="name_id">name id</string>
    <string name="bank_name">bank name</string>
    <string name="bank_card_number">bank card number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv_code">cvv code</string>
    <string name="billing_address">Billing Address</string>
    <string name="apt_number">Apt \#</string>


    <string name="alarm">Alarm</string>
    <string name="alarm_content">You have a reminder to be done</string>

</resources>
