<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/backgroundwhite_2">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_notebook"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimary"
            app:theme="@style/Theme.AppCompat.Light.NoActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:hint="@string/note_name"
            android:textAppearance="?android:attr/textAppearanceLarge">
            <requestFocus />
        </EditText>

        <com.smartdo.suxin.allinv2.LinedEditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:scrollbars="vertical"
            android:hint="@string/write_your_note_content_here"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>



    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/notebook_menu_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        fab:menu_icon="@drawable/ic_star_white_24dp"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="#FF8F1E4A"
        fab:menu_labels_maxLines="2"
        fab:menu_labels_ellipsize="end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_white_24dp"
            fab:fab_label="@string/save"
            style="@style/MenuButtonsSmall.Grey" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_red_a700_24dp"
            fab:fab_label="@string/cancel"
            style="@style/MenuButtonsSmall.Grey" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_white_24dp"
            fab:fab_label="@string/camera"
            style="@style/MenuButtonsSmall.Grey" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_white_24dp"
            fab:fab_label="@string/delete"
            style="@style/MenuButtonsSmall.Grey" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
