<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Calculator_Bank_Add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_calculator"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimary"
            app:theme="@style/Theme.AppCompat.Light.NoActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            custom:pager_animation="Accordion"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation_span="1100"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/bank_add_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_gravity="end"
            android:text="@string/action_delete"
            style="@style/AppTheme.TextView.DeleteButton"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_account_circle_black_18dp"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/holder_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/first_name"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/holder_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/last_name"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/card_id"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/name_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/name_id"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_account_balance_black_24dp"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/bank_account_bank_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/bank_name"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_credit_card_black_36dp"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/bank_account_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/bank_card_number"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_date_range_black_36dp"
                android:padding="4dp"/>
            <TextView
                android:id="@+id/expiration_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/spacing_small"
                android:gravity="left"
                android:textSize="20dp"
                android:background="?attr/selectableItemBackground"
                tools:text="@string/expiration_date"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cvv_code"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/bank_cvv_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/cvv_code"
                android:textSize="20dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_location_on_black_36dp"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/bank_billing_address_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/billing_address"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_mic_none_white_36dp"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/bank_billing_address_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/apt_number"
                android:textSize="20dp"/>
        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_calculator_bank_add_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_24dp"/>
</android.support.design.widget.CoordinatorLayout>




