<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="42dp"/>

            <TextView
                android:id="@+id/todotodo_detail_todo_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:singleLine="true"
                android:textSize="@dimen/todo_edit_font_size"
                android:hint="@string/wishlist_name" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CCEA4C89">

            <EditText
                android:id="@+id/wishlist_item_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_a_todo_item" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_todo_second_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/todo_menu_pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        fab:menu_icon="@drawable/ic_star_white_24dp"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="#FF8F1E4A"
        fab:menu_labels_maxLines="2"
        fab:menu_labels_ellipsize="end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/todotodo_detail_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_white_24dp"
            fab:fab_label="@string/save"
            style="@style/MenuButtonsSmall.Grey" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/todotodo_detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_red_a700_24dp"
            fab:fab_label="@string/clear"
            style="@style/MenuButtonsSmall.Grey" />


    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>

