<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/help_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spacing_small">

            <ImageView
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_outline_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:text="@string/reminder"
                android:textSize="20dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <View style="@style/Divider"></View>

        <LinearLayout
            android:id="@+id/help_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spacing_small">

            <ImageView
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_outline_white_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:text="@string/todo"
                android:textSize="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View style="@style/Divider"></View>

        <LinearLayout
            android:id="@+id/help_notebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spacing_small">

            <ImageView
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_outline_white_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:text="@string/notebook"
                android:textSize="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View style="@style/Divider"></View>

        <LinearLayout
            android:id="@+id/help_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spacing_small">

            <ImageView
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_outline_white_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:text="@string/calculator"
                android:textSize="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View style="@style/Divider"></View>
    </LinearLayout>

</android.support.v7.widget.CardView>


